# video_annotator

./: .travis.yml  Action.cpp  CMakeLists.txt  GUI.cpp  GUI.h  INSTALL  Interpolator.cpp  Interpolator.h  README  README.md  XmlFile.cpp  XmlFile.h  out.xml  test.cpp  video_annotator_path.h.in
data/: blank_xml.xml  sample.xml
output/: city_lights.xml
tinyxml/: tinyxmlparser.cpp  xmltest
